<resources>
    <string name="app_name">Smart Manager</string>
    <string name="rest_url">https://ararhni.herokuapp.com</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_company">Company</string>
    <string name="menu_item_region">Regions</string>
    <string name="menu_item_branch">Branches</string>
    <string name="menu_item_department">Departments</string>
    <string name="menu_item_person">Users</string>
    <string name="menu_item_team">Privileges</string>
    <string name="menu_item_task_outgoing">Outgoing Tasks</string>
    <string name="menu_item_task_incoming">Incoming Tasks</string>
    <string name="menu_item_ticket">Leaving Tickets</string>
    <string name="menu_item_notice">Financial permissions</string>
    <string name="action_logout">Sign Out</string>
    <string name="txt_regions">Regions</string>
    <string name="txt_branches">Branches</string>
    <string name="txt_departments">Departments</string>
    <string name="txt_employees">Employees</string>
    <string name="persons_count">Persons Count: </string>
    <string name="login_input_email">Email</string>
    <string name="login_input_password">Password</string>
    <string name="login_btn_login">Sign In</string>
    <string name="txt_pending">Pending</string>
    <string name="txt_auto">Auto Closed</string>
    <string name="txt_archive">Archive</string>
    <string name="txt_add_region">New Region</string>
    <string name="txt_name">Name</string>
    <string name="txt_address">Address</string>
    <string name="txt_save">Save</string>
    <string name="txt_manager">Manager</string>
    <string name="txt_delete">Delete</string>
</resources>
